<resources>
    <string name="app_name">ABK</string>
    <string name="abk_logo_desc">Logo ABK Ayo Bicara Kawan</string>

    <string name="title_home">Beranda</string>
    <string name="title_report">Lapor</string>
    <string name="title_chat">Curhat</string>
    <string name="title_history">Riwayat</string>

    <string name="hello_blank_fragment">Sedang dalam pengembangan</string>

    <!--Auth page-->
    <string name="input_name">Nama Lengkap</string>
    <string name="input_email">Alamat Email</string>
    <string name="input_password">Kata Sandi</string>
    <string name="input_confirm_password">Ulang Kata Sandi</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk">MASUK</string>
    <string name="atau">Atau</string>
    <string name="login_google">Masuk Dengan Google</string>
    <string name="register_google">Daftar Dengan Google</string>

    <!--Helper-->
    <string name="selanjutnya">Selanjutnya</string>
    <string name="button_back">Kembali</string>
    <string name="logo_kaizen">Logo Kaizen</string>
    <string name="logo_google">Logo Google</string>
    <string name="tutup">Tutup</string>
    <string name="masuk_ke_akun">Masuk ke Akun</string>

    <!--Home-->
    <string name="account_name">Selamat Datang!</string>
    <string name="article_title">Edukasi</string>
    <string name="article_description">Ayo baca artikel terkait Bullying di Sekolah</string>
    <string name="account">Profil</string>
    <string name="logout">Keluar</string>
    <string name="searchArticle">Cari Artikel…</string>
    <string name="lapor">Menu Lapor</string>
    <string name="curhat">Menu Curhat</string>

    <!--Curhat-->
    <string name="connect_TPPA">Chat ini terhubung dengan Tim TPPA</string>

    <!--Lapor-->
    <string name="form_title_pelaporan">Formulir Pelaporan Tindak Kekerasan</string>
    <string name="radio_korban">Korban</string>
    <string name="radio_saksi">Saksi</string>
    <string name="hint_nama_pelapor">Nama Pelapor</string>
    <string name="hint_tanggal_kejadian">Tanggal Kejadian</string>
    <string name="hint_deskripsi_kejadian">Deskripsi Kejadian</string>
    <string name="hint_tempat_kejadian">Tempat Kejadian</string>
    <string name="hint_nomor_kontak">Nomor yang bisa dihubungi</string>
    <string name="label_unggah_bukti">Unggah Gambar Pendukung</string>
    <string name="button_pilih_berkas">Pilih Gambar</string>
    <string name="button_kirim_laporan">Kirim Laporan</string>
    <string name="label_gambar_telah_diunggah_custom">Gambar pendukung telah diunggah</string>
    <string name="button_berkas_terpilih_custom">Berkas telah dipilih</string>
    <string name="desc_report_image">Gambar pendukung</string>

    <!--History Laporan-->
    <string name="no_report_data_message">Belum ada Data Laporan</string>
    <string name="incident_date_prefix">Kejadian: %1$s</string>
    <string name="status_terkirim">Terkirim</string>

    <!--Dummy Article-->
    <integer-array name="tempdata_article_image">
        <item>@drawable/tempdata_article_image1</item>
        <item>@drawable/tempdata_article_image2</item>
        <item>@drawable/tempdata_article_image3</item>
        <item>@drawable/tempdata_article_image4</item>
        <item>@drawable/tempdata_article_image5</item>
        <item>@drawable/tempdata_article_image6</item>
        <item>@drawable/tempdata_article_image7</item>
    </integer-array>

    <string-array name="tempdata_article_title">
        <item>Bullying Bukan Tindakan Terpuji: Mencegah Bullying di Sekolah</item>
        <item>Bullying di Sekolah: Pengertian, Jenis, dan Ciri Pelakunya</item>
        <item>Jangan Lagi Diam, Bullying Itu Bukan Hal Biasa</item>
        <item>Korban Bullying? Jangan Takut Melapor, Sekarang Pelaporan Jadi Lebih Mudah!</item>
        <item>Jeratan Gelap Bullying di Dunia Pendidikan Indonesia</item>
        <item>Berani Melapor Kasus Bullying</item>
        <item>Simpan Bukti Digital, Korban Bullying Harus Berani Lapor</item>
    </string-array>

    <string-array name="tempdata_article_description">
        <item>Perundungan adalah masalah serius yang dapat mempengaruhi kehidupan anak dan remaja di sekolah. Penting untuk memahami dampak negatifnya dan cara mencegahnya agar sekolah menjadi tempat yang aman.</item>
        <item>Bullying merupakan salah satu dari tiga dosa besar di dunia pendidikan dan dapat menimbulkan kerugian bagi korban. Pemerintah mengambil langkah serius dalam penanganannya di sekolah.</item>
        <item>Maraknya kasus perundungan menandakan kurangnya sistem perlindungan efektif. Semua pihak perlu bekerja sama menanamkan nilai toleransi, empati, dan keberanian melawan ketidakadilan.</item>
        <item>Perkembangan teknologi mempermudah berbagai aspek kehidupan, termasuk layanan publik seperti sistem pelaporan kasus bullying yang kini lebih mudah diakses masyarakat.</item>
        <item>Perilaku bullying masih membayangi pelajar Indonesia. Pendidikan dari keluarga harus digalakkan untuk membebaskan institusi pendidikan dari belenggu bullying yang merenggut rasa aman.</item>
        <item>Bullying adalah segala bentuk penindasan atau kekerasan yang dilakukan dengan sengaja oleh satu orang atau kelompok yang lebih kuat dengan tujuan menyakiti dan dilakukan secara terus menerus.</item>
        <item>Perundungan di dunia digital adalah perilaku agresif menggunakan media elektronik secara berulang terhadap korban yang dianggap tidak mudah melakukan perlawanan. Penting untuk menyimpan bukti digital.</item>
    </string-array>

    <string-array name="tempdata_article_url">
        <item>https://ditsmp.kemendikdasmen.go.id/ragam-informasi/article/bullying-bukan-tindakan-terpuji-mencegah-bullying-di-sekolah</item>
        <item>https://www.detik.com/edu/detikpedia/d-7463301/bullying-di-sekolah-pengertian-jenis-dan-ciri-pelakunya</item>
        <item>https://www.kompasiana.com/nurhikmah2246/683f0eb2ed64156c3909caa2/jangan-lagi-diam-bullying-itu-bukan-hal-biasa</item>
        <item>https://kumparan.com/khanif-yunan-pratama/korban-bullying-jangan-takut-melapor-sekarang-pelaporan-jadi-lebih-mudah-23qIITBWC6Y</item>
        <item>https://www.ums.ac.id/berita/perspektif/jeratan-gelap-bullying-di-dunia-pendidikan-indonesia</item>
        <item>https://radarsemarang.jawapos.com/opini/721390319/berani-melapor-kasus-bullying</item>
        <item>https://infojateng.id/read/13752/simpan-bukti-digital-korban-bullying-harus-berani-lapor/</item>
    </string-array>
    <!--    data dummy article-->

    <!--    Home After Signed-->
    <string name="greetings_with_name">"Halo, Nama Pengguna! ></string>
    <string name="progress_title">Progress Kamu</string>
    <string name="progress_title2">Selamat Datang!</string>
    <string name="number_of_exercise">Banyak latihan: </string>


    <string name="hallo">Hallo!</string>
    <string name="article_summary">Lorem Ipsum Dolor Sir Amet</string>
    <string name="article_title_data">Judul Artikel Judul Artikel Judul Artikel Judul Artikel Judul Artikel Judul Artikel Judul Artikel</string>
    <string name="article_description_data">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="detail_title">Detail Latihan</string>
    <string name="about">About Kaizen Speaking</string>
</resources>